--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
-        "express": "4.16.2"
+        "express": "4.16.2",
+        "request": "^2.81.0"
     },
     "devDependencies": {
         "mocha": "5.0.0",
